k8s/frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-frontend
spec:
  selector:
    app: streamlit-frontend
  ports:
    - port: 80
      targetPort: 8501
  type: ClusterIP
