k8s/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: streamlit.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamlit-frontend
                port:
                  number: 80
